--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,10 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/icon-180x180.png">
 
-    <link rel="icon" href="/favicon.ico" />
-    <title>React.js Boilerplate</title>
+    <link rel="icon" href="/favicon.ico" />    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    
+    <title>React workshop 2018</title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
