--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,12 @@
     <!-- Open Sans Font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out the webpack config files in internals/webpack for details) -->
+
   
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuycdKAM2qNHEmuu-Pbie8kAbwOm9ENpg"></script>
+  
+  
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuycdKAM2qNHEmuu-Pbie8kAbwOm9ENpg"></script> -->
   
   </body>
 </html>
